--- a/index.html
+++ b/index.html
@@ -2,4 +2,13 @@
 title: AutoPhrase Through Time
 ---
 
-<h1> Welcome </h1>
+<h1>Introduction</h1>
+<h1>Data</h1>
+<h2>Using AutoPhrase</h2>
+<h2>EDA of AutoPhrase Results</h2>
+<h1>Model</h1>
+<h2>Model Creation</h2>
+<h2>Model Results</h2>
+<h1>Results</h1>
+<h2>Future Extensions</h2>
+
