--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: jekyll-theme-slate
 title: AutoPhrase Through Time
 ---
 
-<h1>Introduction</h1>
+<h1>Introduction Test</h1>
 <h1>Data</h1>
 <h2>Using AutoPhrase</h2>
 <h2>EDA of AutoPhrase Results</h2>
